--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       const arrivee = encodeURIComponent(document.getElementById("arrivee").value);
       const probleme = encodeURIComponent(document.getElementById("probleme").value);
 
-      const message = `Bonjour, je m'appelle ${prenom} ${nom}. Mes biens à déménager viennent de ${depart} et doivent arriver à ${arrivee}. Voici le problème rencontré : ${probleme}.`;
+      const message = `Bonjour, je m'appelle ${prenom} ${nom}. Mes biens à déménager proviennent de ${depart} et doivent arriver à ${arrivee}. Voici le problème rencontré : ${probleme}.`;
       const numero = "41796882735";
       const lien = `https://wa.me/${numero}?text=${message}`;
 
